@@ -1,5 +1,13 @@
 Thu Jan  11 08:48:30 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
+        * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Seq/VT_Seq_Connector.idl
+        * connectors/dds4ccm/tests/VariousTopicsState/Conn_Seq/VTS_Seq_Connector.idl
+        * connectors/dds4ccm/tests/VariousTopicsState/Sender/VTopics_Sender_exec.h
+          Remove some tabs.
+
+
+Thu Jan  11 08:48:30 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
         * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Array/VT_Array_Connector_exec.h
         * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Seq/VT_Seq_Connector_exec.h
         * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_String/VT_String_Connector.idl
